...
        fromValue: String,
        fromInstant: Instant?,
        toValue: String,
        toInstant: Instant?
    ): String? {
        if (fromValue.isNotBlank() && fromInstant == null) {
            return "Could not parse 'From' date/time"
        }

        if (toValue.isNotBlank() && toInstant == null) {
            return "Could not parse 'To' date/time"
        }

        return if (fromInstant != null && toInstant != null && fromInstant.isAfter(toInstant)) {
            "From must be before or equal to To"
        } else {
            null
...
